# ESP32-matter-aws-iot-integration

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  demo_config.h  mqtt_demo_mutual_auth.c  mqtt_demo_mutual_auth.cpp
